# Empyrial

./: .firebaserc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README_CN.md  asset-manifest.json  code_of_conduct.md  contributing.md  demo.html  environment.yaml  firebase.json  home.html  index.html  license.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  style_new-1.min.css  trafalgar-0.0.2-py3-none-any.whl  trafalgar.ipynb  trafalgar.py  trafalgar_demo.ipynb  trafalgar_tutorial.ipynb  trafalgars-0.0.1-py3-none-any.whl
.github/: ci-cd.yml
.github/ISSUE_TEMPLATE/: custom.md  feature_request.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  python-publish.yml
EigenLedger/: main.py  run.py
Empyrial/: __init__.py  empyrial-0.1.1-py3-none-any.whl  empyrial.py  fundamental.py  rebalance_test.py  setup.py  trafalgar.py
Empyrial/test/: fundlens_test.py  optimizer_test.py  rebalance_test.py
docs/source/: conf.py
empyrial/: window.py
public/: index.html
src/: App.css  App.js  __init__.py
src/EigenLedger/: __init__.py  main.py
src/components/: ButtonElements.js
src/empyrial/: __init__.py  main.py
src/pages/: index.js
static/css/: main.a0ce62b7.chunk.css.map
static/js/: 2.5c6208c5.chunk.js  2.5c6208c5.chunk.js.map  2.a38f6360.chunk.js.map  main.95354fec.chunk.js  main.95354fec.chunk.js.map  (+3 more)
test/: empyrial_test.py  rebalance_test.py  trafalgar.ipynb
trafalgar/: __init__.py  trafalgar.py  trafalgar.whl
yes/: index.html
(+24 files in other folders)
