[metadata]
name = empyrial
version = 2.0.7
description = An Open Source Portfolio Management Framework for Everyone 投资组合管理
url = https://github.com/ssantoshp/Empyrial
long_description_content_type = text/markdown
long_descript = # Empyrial
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
         numpy
         matplotlib
         datetime
         empyrical
         quantstats
         yfinance
         ipython
         fpdf
         pyportfolioopt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo =empyrial.main:entry_point
